# rpg

./: CMakeLists.txt  run.sh
assets/: world.ini
include/rpg/: game.h  input.h  layout.h  screen.h  terminal.h  world.h
src/: main.c
src/game/: game.c  terminal.c  textbox.c  textbox.h  world.c
src/input/: input.c  input_impl.h
src/screen/: fileutil.c  fileutil.h  font.c  font.h  screen.c  screen_impl.h
